# OpenGLTests

./: README.md
test1-triangle-and-shaders/: README.md
test1-triangle-and-shaders/OpenGLTest1/: ShaderManager.cpp  Triangle.cpp  Triangle.h  main.cpp
test1-triangle-and-shaders/project/: Actor.h  CMakeLists.txt  ShaderManager.h  Triangle.cpp  Triangle.h  main.cpp
test1-triangle-and-shaders/project/shaders/: testFragmentShader.glsl  testVertexShader.glsl
test2-squares-and-movement/: README.md
test2-squares-and-movement/OpenGLTest2/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  ShaderManager.cpp  ShaderManager.h  Square.cpp  Square.h  main.cpp
test2-squares-and-movement/OpenGLTest2/shaders/: textureShaderVertex.glsl
test3-textures/: README.md
test3-textures/OpenGLTest3/: CMakeLists.txt  FPSCounter.cpp  FPSCounter.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  main.cpp
test3-textures/OpenGLTest3/shaders/: fragmentShader.glsl  vertexShader.glsl
